--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,37 @@ i.triangle{
     border:6px solid transparent;
     border-left:6px solid #000;
 }
+
+/*垂直居中*/
+.search{
+	position: relative;
+	height: 60px;
+	padding:0 0 0 8px;
+	border-top:1px solid #cccccc;
+	border-bottom:1px solid #cccccc;
+	vertical-align:middle;
+
+} 
+.search .form_text{
+	vertical-align:middle;
+	color:#181818;
+}
+.search .form_text label{
+	margin: 0 12px;
+
+}
+.search .query{
+	width: 100px;
+	height: 35px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	background-color: #2194ff;
+	color:#fff;
+}
+.search .vertical-align-span{
+	display: inline-block;
+	width: 1px;
+	height: 100%;
+	vertical-align: middle;
+
+}
