--- a/framework/gulp/views/index.html
+++ b/framework/gulp/views/index.html
@@ -4,8 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="../src/css/index.css">
+	<style>
+		.box{
+			width: 200px;
+			height: 200px;
+			background-color: #f00;
+		}
+
+	</style>
 </head>
 <body>
-	
+	<div class="box"></div>
 </body>
 </html>
