--- a/html/Template/Pc.html
+++ b/html/Template/Pc.html
@@ -5,6 +5,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <!-- 清除缓存 -->
+    <!-- <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="0"> -->
+
     <title>Pc html Template</title>
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="Reactjs,ReactJS,ReactJS中文,React,React中文,Reactjs中文文档">
