--- a/html/Template/Wap.html
+++ b/html/Template/Wap.html
@@ -10,6 +10,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<!--默认情况下，设备会自动识别任何可能是电话号码的字符串。设置telephone=no可以禁用这项功能。  -->
 	<meta name="format-detection" content="telephone=no">
+	<meta name="keywords" content="">
+    <meta name="description" content="">
 	<title>wap</title>
 </head>
 <body>
