--- a/css/styleReset.css
+++ b/css/styleReset.css
@@ -1,38 +1,3 @@
-	/*视情况而定*/
-/*
-*{
-	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-*/
-
-
-body,p,ul,li,h1,h2,h3,h4,h5,h6,input,select{
-	margin:0px;
-	padding:0px;
-}
-a:link,a:visited,a:hover,a:active{
-	text-decoration:none;
-}
-img{
-	display: block;
-	border:none;
-}
-ul,li{
-	list-style: none;
-}
-button,button:active{
-	border:none;
-	background:none;
-	outline:none;
-}
-input{
-  border:none;
-  outline: none;
-}
-
-/*********************************************************************************/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -45,7 +10,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video ,select{
   margin: 0;
   padding: 0;
   border: 0;
@@ -77,7 +42,16 @@ table {
   border-spacing: 0;
 }
 img {
+  display: block;
   border: none;
   vertical-align: top; 
 }
-
+input{
+  margin: 0;
+  padding: 0;
+  border:none;
+  outline: none;
+}
+a:link,a:visited,a:hover,a:active{
+  text-decoration:none;
+}
