--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,9 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 
 /* 用 transition 的时候要小心，因为页面刷新的时候会有动画效果*/
 
+
+/*qu*/
+select{
+	outline: none;
+    -webkit-appearance: none;
+}
