--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,19 @@ select{
 a{
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 }
+
+
+/*定义滚动条的样式*/
+.popup-tips .tips-text::-webkit-scrollbar{
+    width: 10px;
+    height: 16px;
+    border-radius: 10px;
+    background-color: #b8000c;
+}
+.popup-tips .tips-text::-webkit-scrollbar-thumb{
+    width: 5px;
+    height: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #fff;
+}
