--- a/css/style.css
+++ b/css/style.css
@@ -58,17 +58,17 @@ input{
 }
 
 /*input placeholder 字体的颜色*/
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-　　color: #666;
+	input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+　　	color: #666;
 　　}
 　　input:-moz-placeholder, textarea:-moz-placeholder {
-　　color:#666;
+　　	color:#666;
 　　}
 　　input::-moz-placeholder, textarea::-moz-placeholder {
-　　color:#666;
+　　	color:#666;
 　　}
 　　input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-　　color:#666;
+　　	color:#666;
 　　}
 /**/
 {
@@ -107,3 +107,11 @@ a{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #fff;
 }
+
+/*半透明兼容*/
+.opacity{
+	opacity: 0.7;
+	filter: alpha(opacity=70);
+}
+
+
