--- a/html/Template/Pc.html
+++ b/html/Template/Pc.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+    <!-- 以上代码IE=edge告诉IE使用最新的引擎渲染网页, chrome=1则可以激活Chrome Frame -->
     <!-- 清除缓存 -->
     <!-- <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
